# multi-streamer

./: CMakeLists.txt  README.md  config.json  detector.cpp  detector.h  detector_dummy.cpp  detector_dummy.h  detector_yolo.cpp  detector_yolo.h  detector_yolo11n.cpp  detector_yolov5.cpp  device_manager.cpp  device_manager.h  main.cpp  streamer.cpp  streamer.h
